--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.1",
+    "react-slick": "^0.31.0",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
     "zustand": "^5.0.8"
