--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@types/node": "^24.4.0",
     "classnames": "^2.5.1",
+    "embla-carousel-react": "^8.6.0",
     "path": "^0.12.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.9.1",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
